--- a/project/public/index.html
+++ b/project/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Learn Words</title>
   </head>
